--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# This is a generated file; do not edit it manually.
+dataset/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
